--- a/Xpress.Web/Xpress.Web.csproj
+++ b/Xpress.Web/Xpress.Web.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200522204118_InitialDB.cs" />
+    <Compile Remove="Migrations\20200522204118_InitialDB.Designer.cs" />
+    <Compile Remove="Migrations\20200523023534_InitialDB.cs" />
+    <Compile Remove="Migrations\20200523023534_InitialDB.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
